--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,1 @@
-<goal-calendar [data]="chartData"  (itemClick)="onCalendarItemClick($event)"></goal-calendar>
-
-<div>    
-    <button *ngFor="let activity of activities" type="button" class="btn btn-primary" (click)="onActivityClick(activity)">
-        {{activity.caption}}
-    </button>
-</div>
-
-<div> Specify caption with weight: "Eat right:10, Sleep:20"</div>
-<textarea [(ngModel)]="activityText" style="width:450px; height:100px;"></textarea>
-
-<button type="button" class="btn btn-primary" (click)="onUpdateActivities()">
-    Update Activities
-</button>
-
-<div></div>
-cal-views: week, month, 3/6mo, year
-
-change date; tracks #items and date-done
-
-seed: https://github.com/r-park/todo-angular2-firebase
+<activity-tracker></activity-tracker>
