--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -3,20 +3,35 @@
 </div>
 <!-- User NOT logged in -->
 <ng-template #guest>
-<h3>Howdy, GUEST</h3>
-<p>Login to get started...</p>
-
-<button (click)="auth.googleLogin()">
-  <i class="fa fa-google"></i> Connect Google
+<h3>Login</h3>
+<p>Please login to get started...</p>
+<!--
+<button (click)="auth.facebookLogin()">
+  <i class="fa fa-facebook"></i> Connect with Facebook
 </button>
+-->
+<button (click)="auth.googleLogin()">
+  <i class="fa fa-google"></i> Connect with Google
+</button>
+<!--
+<button (click)="auth.phoneLogin()">
+  <i class="fa fa-phone"></i> Connect with Phone
+</button>
+-->
+<button (click)="auth.githubLogin()">
+  <i class="fa fa-github"></i> Connect with Github
+</button>
+<button (click)="auth.twitterLogin()">
+  <i class="fa fa-twitter"></i> Connect with Twitter
+</button>
+
 </ng-template>
 <!-- User logged in -->
 <ng-template #authenticated>
 <div *ngIf="auth.user | async as user">
-  <h3>Howdy, {{ user.displayName }}</h3>
+  <h3>hello, {{ user.displayName }}</h3>
   <img  [src]="user.photoURL">
-  <p>UID: {{ user.uid }}</p>
-  <p>Favorite Color: {{ user?.favoriteColor }} </p>
+  <activity-tracker></activity-tracker>
   <button (click)="auth.signOut()">Logout</button>
 </div>
 </ng-template>
