--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,22 +6,22 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>    
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>     
-        <li class="nav-item dropdown" dropdown> <!-- {1} -->
-            <a dropdownToggle role="button" class="nav-link dropdown-toggle" href="#"> <!-- {2} -->
-                Dropdown <span class="caret"></span></a>
-            <ul *dropdownMenu class="dropdown-menu"> <!-- {3} -->                    
-                <li><a class="dropdown-item"href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#" >Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a class="dropdown-item" href="#">One more separated link</a></li>
-            </ul>
-        </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>               
+            <user-signin></user-signin>
+                <!--
+                <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle role="button" class="nav-link dropdown-toggle" href="#">
+                        Dropdown <span class="caret"></span></a>
+                    <ul *dropdownMenu class="dropdown-menu">
+                        <li><a class="dropdown-item"href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#" >Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a class="dropdown-item" href="#">One more separated link</a></li>
+                    </ul>                    
+                </li>
+            -->
         </ul>
         <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
