--- a/src/app/user/user-signin/user-signin.component.html
+++ b/src/app/user/user-signin/user-signin.component.html
@@ -1,36 +1,35 @@
 
-<div *ngIf="auth.user | async; then authenticated else guest">
+
+<span *ngIf="auth.user | async; then authenticated else guest">
   <!-- template will replace this div -->
-</div>
-<!-- User NOT logged in -->
+</span>
+
 <ng-template #guest>
-  <ul>
-  <!--
-  <button (click)="auth.facebookLogin()">+
-    <i class="fa fa-facebook"></i> Connect with Facebook
-  </button>
-  -->
-  <li (click)="auth.googleLogin()">
-      <i class="fa fa-google"></i> Connect with Google
-  </li>
-  <!--
-  <button (click)="auth.phoneLogin()">
-    <i class="fa fa-phone"></i> Connect with Phone
-  </button>
-  -->
-  <li (click)="auth.githubLogin()">
-      <i class="fa fa-github"></i> Connect with Github
-  </li>
-  <li (click)="auth.twitterLogin()">
-      <i class="fa fa-twitter"></i> Connect with Twitter
-  </li>
-</ul>
+  <li class="nav-item dropdown" dropdown>
+    <a dropdownToggle role="button" class="nav-link dropdown-toggle"> <!-- {2} -->
+        Login <span class="caret"></span></a>
+    <ul *dropdownMenu class="dropdown-menu"> <!-- {3} -->                    
+        <li><a class="dropdown-item" (click)="auth.googleLogin()">Connect with Google</a></li>
+        <li><a class="dropdown-item" (click)="auth.githubLogin()">Connect with Github</a></li>
+        <li><a class="dropdown-item" (click)="auth.twitterLogin()">Connect with Twitter</a></li>
+    </ul>
+</li>
 </ng-template>
 
-<!-- User logged in -->
 <ng-template #authenticated>
+  <li class="nav-item dropdown" dropdown *ngIf="auth.user | async as user">
+    <a dropdownToggle role="button" class="nav-link dropdown-toggle"> <!-- {2} -->
+      <img class="profile-img" [src]="user.photoURL"/> {{ user.displayName }} <span class="caret"></span></a>
+    <ul *dropdownMenu class="dropdown-menu"> <!-- {3} -->                    
+        <li><a class="dropdown-item" href="#/userprofile">User Profile</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a class="dropdown-item" (click)="auth.signOut()">Logout</a></li>
+    </ul>
+  </li>
+<!--
   <ul *ngIf="auth.user | async as user">
     <li> <img class="profile-img" [src]="user.photoURL"/> {{ user.displayName }}</li>  
     <li (click)="auth.signOut()">Logout</li>
   </ul>
+-->
 </ng-template>
