--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -35,11 +35,12 @@
 <!-- User logged in -->
 <ng-template #authenticated>
 <div *ngIf="auth.user | async as user">
-  <h3>hello, {{ user.displayName }}</h3>
+  <h3>{{ user.displayName }}</h3>
   <img [src]="user.photoURL">
-  <div>
-    {{user}}
-  </div>
+  <div>{{ user.email}}</div>
+  
   <button type="button" class="btn btn-warning" (click)="auth.signOut()">Logout</button>
 </div>
 </ng-template>
+
+ 
