--- a/src/app/activity-tracker/activity-tracker.component.html
+++ b/src/app/activity-tracker/activity-tracker.component.html
@@ -1,26 +1,30 @@
-<goal-calendar [data]="chartData"  (itemClick)="onCalendarItemClick($event)"></goal-calendar>
-
-<day-display (activityDeleted)="onActivityDeleted($event)"></day-display>
-
-<div>    
-    <button *ngFor="let activity of this.activityListingService.getActivities()" type="button" class="btn" 
-        [ngClass]="{
-            'btn-success':activity.weight > 0,
-            'btn-warning': activity.weight >= -10 && activity.weight <= 0,
-            'btn-danger':activity.weight < -10
-        }"
-        (click)="onActivityClick(activity)">
-        {{activity.caption}}
-    </button>
-</div>
-
 <div> Specify caption with weight: "Eat right:10, Sleep:20, Junk food: -15"</div>
-<textarea [(ngModel)]="activityText" style="width:450px; height:100px;"></textarea>
+<textarea [(ngModel)]="activityText" class="activities-text"></textarea>
 <div>
     <button type="button" class="btn btn-primary" (click)="onUpdateActivities()">
         Update Activities
     </button>
 </div>
+
+<goal-calendar [data]="chartData"  (itemClick)="onCalendarItemClick($event)"></goal-calendar>
+
+<div class="row">    
+    <div class="col">
+        <button *ngFor="let activity of this.activityListingService.getActivities()" type="button" class="btn" 
+            [ngClass]="{
+                'btn-success':activity.weight > 0,
+                'btn-warning': activity.weight >= -10 && activity.weight <= 0,
+                'btn-danger':activity.weight < -10
+            }"
+            (click)="onActivityClick(activity)">
+            {{activity.caption}}
+        </button>
+    </div>
+    <div class="col">
+        <day-display (activityDeleted)="onActivityDeleted($event)"></day-display>
+    </div>
+</div>
+
 
 <ul>
     <li class="text" *ngFor="let item of items | async">
