--- a/src/app/user/user-signin/user-signin.component.html
+++ b/src/app/user/user-signin/user-signin.component.html
@@ -21,7 +21,7 @@
     <a dropdownToggle role="button" class="nav-link dropdown-toggle"> <!-- {2} -->
       <img class="profile-img" [src]="user.photoURL"/> {{ user.displayName }} <span class="caret"></span></a>
     <ul *dropdownMenu class="dropdown-menu"> <!-- {3} -->                    
-        <li><a class="dropdown-item" href="#/userprofile">User Profile</a></li>
+        <li><a class="dropdown-item" href="/userprofile">User Profile</a></li>
         <li role="separator" class="divider"></li>
         <li><a class="dropdown-item" (click)="auth.signOut()">Logout</a></li>
     </ul>
