--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#">Activity Tracker</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div class="collapse navbar-collapse" [collapse]="isCollapsed" id="navbarsDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>               
-            <user-signin></user-signin>
-                <!--
-                <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle role="button" class="nav-link dropdown-toggle" href="#">
-                        Dropdown <span class="caret"></span></a>
-                    <ul *dropdownMenu class="dropdown-menu">
-                        <li><a class="dropdown-item"href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#" >Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a class="dropdown-item" href="#">One more separated link</a></li>
-                    </ul>                    
-                </li>
-            -->
+            </li>                        
+            <user-signin></user-signin>           
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
 <router-outlet></router-outlet>
