--- a/src/app/activities-edit/activities-edit.component.html
+++ b/src/app/activities-edit/activities-edit.component.html
@@ -1,7 +1,9 @@
-<div> Specify activity with weight: "Eat right:10, Workout:20, Junk food: -15"</div>
-<textarea [(ngModel)]="activityText" class="activities-text"></textarea>
-<div>
-    <button type="button" class="btn btn-primary" (click)="activityListingService.updateActivities(activityText)">
-        Update Activities
-    </button>
+<div class="col">
+    <div> Specify activity with weight: "Eat right:10, Workout:20, Junk food: -15"</div>
+        <textarea [(ngModel)]="activityText" class="activities-text col"></textarea>
+    <div>
+        <button type="button" class="btn btn-primary" (click)="activityListingService.updateActivities(activityText)">
+            Update Activities
+        </button>
+    </div>
 </div>
