--- a/src/app/day-display/day-display.component.html
+++ b/src/app/day-display/day-display.component.html
@@ -4,7 +4,7 @@
 <div class="display-list" *ngFor="let activity of activityTrackingService.getActivitiesBySelectedDate()">
       <span [ngClass]="{'neg-item': activity.weight <= 0}"
       >{{activity.caption}} {{activity.timeToString()}}</span>
-      <button type="button" class="close" aria-label="Close" (click)="deleteActivity(activity)">
+      <button type="button" class="close" aria-label="Close" (click)="activityTrackingService.deleteActivity(activity)">
         <span aria-hidden="true">&times;</span>
       </button>
 </div>
