show/hide activities and cleanup

--- a/src/app/activities-edit/activities-edit.component.html
+++ b/src/app/activities-edit/activities-edit.component.html
@@ -1,9 +1,14 @@
-<div class="col">
+<div class="col" *ngIf="showEdits">
     <div> Specify activity with weight: "Eat right:10, Workout:20, Junk food: -15"</div>
-        <textarea [(ngModel)]="activityListingService.activityListText" class="activities-text col"></textarea>
+        <textarea [(ngModel)]="activityListText" class="activities-text col"></textarea>
     <div>
-        <button type="button" class="btn btn-primary" (click)="activityListingService.updateActivities(activityListingService.activityListText)">
+        <button type="button" class="btn btn-primary" (click)="updateActivities()">
             Update Activities
         </button>
     </div>
+</div>
+<div *ngIf="!showEdits">
+    <button type="button" class="btn btn-primary" (click)="showEditPanel()">
+        Edit Activities
+    </button>
 </div>
